Bug 276525 - Image editor offers to save image when quitting even when it has just been saved.
Summary: Image editor offers to save image when quitting even when it has just been sa...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ImageEditor-Save (other bugs)
Version First Reported In: 2.0.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-26 13:19 UTC by barsanuphe
Modified: 2022-02-02 16:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description barsanuphe 2011-06-26 13:19:12 UTC
Version:           2.0.0 (using Devel) 
OS:                Linux

The image editor always asks if image should be saved upon closing it (either closing the editor or going to the next or previous image), if the image has been altered and regardless of wether it has already been saved as is.

Reproducible: Always

Steps to Reproduce:
Open a picture with Image Editor. 
Modify it (for example, Color Auto-Correction).
Save the modified picture.
Close the Editor. 

Actual Results:  
A warning dialog appears stating the image has been modified and prompts to save or discard the changes.

Expected Results:  
Nothing should happen as the image has not been altered since previous save.

Running Archlinux packages digikam-git and kipi-plugins-git. 
Versioning is disabled.
Comment 1 caulier.gilles 2011-06-27 11:35:28 UTC
Strange. From git master i cannot reproduce it...

Which type of image you edit ? RAW or JPEG ? Do you use Raw Import tool ?

Do you use versionning ? If yes, do you have a look in versionning setup from config dialog ?

Gilles Caulier
Comment 2 barsanuphe 2011-06-27 16:28:09 UTC
I get this behavior while editing a jpg image. 
Versionning is off. The option "When closing the editor" was set to "always ask to save changes" which I had ignored thinking it was linked to the versionning system (it is, right?). However, setting it to "Save changes automatically" makes no difference. 

I compiled digikam again yesterday and am running: 

Rev.: 87a6a93e2f3d3ae93fbd97c1804244fbc7d9e1d1
Comment 3 Marcel Wiesweg 2011-07-15 20:16:11 UTC
Happens only with "Save" if non-destructive is switched off
Comment 4 Marcel Wiesweg 2011-07-16 14:19:50 UTC
Git commit 819d6332bfe2bff65e8144e89edf32c2b331ff3d by Marcel Wiesweg.
Committed on 15/07/2011 at 23:26.
Pushed by mwiesweg into branch 'master'.

In old-style saving mode, reset the undo manager's origin after a Save operation
so that the Save button is disabled and no warning asked at quit.
Rename methods to more appropriate naming

BUG: 276525

M  +1    -1    showfoto/main/showfoto.cpp
M  +2    -1    NEWS
M  +2    -1    utilities/imageeditor/editor/editorwindow.h
M  +3    -1    utilities/imageeditor/editor/imagewindow.cpp
M  +6    -1    utilities/imageeditor/editor/editorwindow.cpp

http://commits.kde.org/digikam/819d6332bfe2bff65e8144e89edf32c2b331ff3d