In old-style saving mode, reset the undo manager's origin after a Save operation so that the Save button is disabled and no warning asked at quit. Rename methods to more appropriate naming

BUG: 276525